--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,16 @@
     transform: rotate(360deg);
   }
 }
+
+.error {
+  color: #842029;
+  background-color: #f8d7da;
+  border-color: #f5c2c7;
+}
+
+.success {
+  color: #0f5132;
+  background-color: #d1e7dd;
+  border-color: #badbcc;
+}
+
